<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculator">

    <EditText
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/food"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/food_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <Spinner
        android:id="@+id/food_spinner"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food" />

    <EditText
        android:id="@+id/food_nki"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nki_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toEndOf="@+id/food_spinner"
        app:layout_constraintTop_toBottomOf="@+id/food" />

    <Button
        android:id="@+id/food_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:onClick="addToFileFood"
        android:text="@string/add_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/food_nki"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/food_running_total"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/food_total_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_spinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/food_total_text"
        android:layout_width="100dp"
        android:layout_height="26dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="276dp"
        android:text="@string/food_total_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_spinner" />

    <TextView
        android:id="@+id/exercise"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exercise_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_spinner" />

    <Spinner
        android:id="@+id/exercise_spinner"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise" />

    <EditText
        android:id="@+id/exercise_nki"
        android:layout_width="102dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/nki_text"
        app:layout_constraintStart_toEndOf="@+id/exercise_spinner"
        app:layout_constraintTop_toBottomOf="@+id/food_nki" />

    <Button
        android:id="@+id/exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="addToFileExercise"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/exercise_nki"
        app:layout_constraintTop_toBottomOf="@+id/food_button" />

    <TextView
        android:id="@+id/exercise_total_text"
        android:layout_width="122dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="132dp"
        android:text="@string/exercise_total_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/food_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/food_total_text" />

    <TextView
        android:id="@+id/exercise_running_total"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/exercise_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toEndOf="@+id/food_running_total"
        app:layout_constraintTop_toBottomOf="@+id/food_spinner"
        app:layout_constraintVertical_bias="0.964" />

    <TextView
        android:id="@+id/nett_total"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="224dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/running_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toEndOf="@+id/exercise_running_total"
        app:layout_constraintTop_toBottomOf="@+id/food_spinner" />

    <TextView
        android:id="@+id/running_total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/running_total_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/exercise_total_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/exercise_total_text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="saveToDiary"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/running_total_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="backClick"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_total_text"
        app:layout_constraintVertical_bias="0.031" />

</android.support.constraint.ConstraintLayout>