<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        android:layout_width="396dp"
        android:layout_height="706dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48">

        <ImageButton
            android:id="@+id/calc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"

            android:onClick="launchCalculator"
            android:src="@drawable/calculator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/diary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/diary"
            android:onClick="launchDiary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_button" />

        <TextView
            android:id="@+id/calc_def"
            android:layout_width="159dp"
            android:layout_height="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="8dp"
            android:text="@string/calc_def"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toEndOf="@+id/calc_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diary_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="8dp"
            android:text="@string/diary_def"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.245"
            app:layout_constraintStart_toEndOf="@+id/diary_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_def" />

        <TextView
            android:id="@+id/averageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="#00E90404"
            android:backgroundTint="#00FFFFFF"
            android:hint="@string/inital_average"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.163" />


</android.support.constraint.ConstraintLayout>